// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useStyling samples Sample1Text rendering with no overrides 1`] = `
<Text
  style={
    Object {
      "color": "black",
      "fontFamily": "Arial",
      "fontSize": 12,
    }
  }
>
  Sample1a
</Text>
`;

exports[`useStyling samples Sample1Text rendering with some custom settings in the theme 1`] = `
<Text
  style={
    Object {
      "color": "pink",
      "fontFamily": "Arial",
      "fontSize": 24,
    }
  }
>
  Sample1b
</Text>
`;
